# AndroidGrafika

./: README.md
android/: build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/libmedia/: build.gradle
android/libmedia/cpp_modules/: CMakeLists.txt  android_jni.cpp  android_jni.h  audio_playback.cpp  ff_recode.cpp  ff_recode.h  jni_bridge.cpp
android/libmedia/cpp_modules/media_common/: audio_decoder.cpp  audio_decoder.h  audio_encoder.cpp  audio_encoder.h  av_demuxer.cpp  av_demuxer.h  av_muxer.cpp  av_muxer.h  java_avstruct.cpp  java_avstruct.h  media_struct.h  raw_stream_parser.cpp  raw_stream_parser.h
android/libmedia/src/main/: AndroidManifest.xml
android/libmedia/src/main/java/apprtc/org/grafika/: JNIBridge.java  Logging.java
android/libmedia/src/main/java/apprtc/org/grafika/Utils/: CalledByNative.java  CalledByNativeUnchecked.java  CameraUtils.java  PermissionHelper.java  ThreadUtils.java
android/libmedia/src/main/java/apprtc/org/grafika/gles/: EglBase10.java  EglBase14.java  GlRectDrawer.java  GlShader.java  GlTextureFrameBuffer.java  RendererCommon.java
android/libmedia/src/main/java/apprtc/org/grafika/media/: AVFFmpeg.java  AVMediaCodec.java  AVMediaRecode.java  AVStruct.java  MediaCodecVideoDecoder.java  MediaCodecVideoEncoder.java
android/test-activity/: build.gradle
android/test-activity/src/main/java/com/org/grafika/: MainActivity.java  RecodeMediaActivity.java  ScreenCaptureActivity.java  ViewsActivity.java
android/test-activity/src/main/java/com/org/grafika/audio_device/: AudioDeviceListEntry.java  AudioDeviceSpinner.java
android/test-activity/src/main/res/layout/: activity_main.xml  activity_recode_media.xml  activity_views.xml  content_main.xml
android/test-activity/src/main/res/values/: dimens.xml  strings.xml
project/android/: .gitignore  build.gradle  build.sh
project/android/libmedia/: build.gradle
project/android/libmedia/cpp_modules/: CMakeLists.txt  audio_playback.h  audio_resample.cpp  audio_resample.h  ff_recode.cpp  ff_recode.h  jni_bridge.cpp  jni_bridge.h  media_codec.cpp  media_codec.h
project/android/libmedia/cpp_modules/media_common/: java_avstruct.cpp  java_avstruct.h  native_log.cpp  native_log.h
project/android/libmedia/src/main/java/apprtc/org/grafika/: AVRecodeInterface.java  JNIBridge.java  Logging.java
project/android/libmedia/src/main/java/apprtc/org/grafika/gles/: EglBase.java  EglBase14.java  EglRenderer.java  GlRectDrawer.java  GlShader.java  GlUtil.java
project/android/libmedia/src/main/java/apprtc/org/grafika/media/: AVMediaCodec.java  AVMediaRecode.java  AVStruct.java  MediaCodecAudioDecoder.java  MediaCodecAudioEncoder.java  MediaCodecVideoDecoder.java  MediaCodecVideoEncoder.java  SurfaceTextureHelper.java
project/android/test-activity/: build.gradle
project/android/test-activity/src/main/: AndroidManifest.xml
project/android/test-activity/src/main/java/com/org/grafika/: AudioPlaybackActivity.java  CameraUtils.java  MainActivity.java  PermissionHelper.java  RecodeMediaActivity.java  ScreenCaptureActivity.java  ViewsActivity.java
project/android/test-activity/src/main/java/com/org/grafika/audio_device/: AudioDeviceAdapter.java  AudioDeviceInfoConverter.java
project/android/test-activity/src/main/res/layout/: activity_audio_playback.xml  activity_screencapture.xml
project/android/test-activity/src/main/res/menu/: menu_main.xml
project/win/: .gitignore  CMakeLists.txt
project/win/source/concat_file/: CMakeLists.txt  concat_file.cpp  concat_file.h
source/core/: common.h
source/core/media_common/: audio_decoder.cpp  audio_decoder.h  audio_encoder.cpp  audio_encoder.h  av_decoder.cpp  av_decoder.h  av_demuxer.cpp  av_demuxer.h  av_encoder.cpp  av_encoder.h  av_muxer.cpp  av_muxer.h  bsf_filter.cpp  bsf_filter.h  media_struct.h  raw_filter.cpp  raw_filter.h  raw_stream_parser.cpp  raw_stream_parser.h
source/core/utils/: jas_getopt.cpp  jas_getopt.h  utils.cpp  utils.h
